--- a/package.json
+++ b/package.json
@@ -18,10 +18,28 @@
   },
   "homepage": "https://github.com/kumar80/Social#readme",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
+    "busboy": "^0.3.1",
+    "connect-busboy": "0.0.2",
+    "email-validator": "^2.0.4",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-session": "^1.17.1",
+    "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.27",
-    "mysql": "^2.18.1"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.2",
+    "multer-gridfs-storage": "^4.2.0",
+    "mysql": "^2.18.1",
+    "os": "^0.1.1",
+    "passport": "^0.4.1",
+    "passport-http-bearer": "^1.0.1",
+    "passport-local": "^1.0.0",
+    "password-validator": "^5.1.0",
+    "path": "^0.12.7",
+    "session-file-store": "^1.4.0"
   }
 }
