--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "os": "^0.1.1",
     "passport": "^0.4.1",
     "passport-http-bearer": "^1.0.1",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "password-validator": "^5.1.0",
     "path": "^0.12.7",
