--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "body-parser": "^1.19.0",
     "busboy": "^0.3.1",
     "connect-busboy": "0.0.2",
+    "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "express-jwt": "^6.0.0",
